--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SimuTrial - AI-Powered FDA Simulation Platform</title>
-    <meta name="description" content="Accelerate FDA approval with AI-powered clinical simulations. Test, validate, and improve your health products before costly trials. Built for biotech innovators." />
-    <meta name="author" content="SimuTrial" />
+    <title>Girlified AI - Clinical Trial Simulation Platform</title>
+    <meta name="description" content="Accelerate approvals with AI-powered clinical simulations. Test, validate, and improve your health products before costly trials. Built for biotech innovators." />
+    <meta name="author" content="Girlified" />
 
-    <meta property="og:title" content="SimuTrial - AI-Powered FDA Simulation Platform" />
-    <meta property="og:description" content="Accelerate FDA approval with AI-powered clinical simulations. Test, validate, and improve your health products before costly trials." />
+    <meta property="og:title" content="Girlified AI - Clinical Trial Simulation Platform" />
+    <meta property="og:description" content="Accelerate approvals with AI-powered clinical simulations. Test, validate, and improve your health products before costly trials." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" /> -->
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
