--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Girlified AI - Clinical Trial Simulation Platform</title>
-    <meta name="description" content="Accelerate approvals with AI-powered clinical simulations. Test, validate, and improve your health products before costly trials. Built for biotech innovators." />
-    <meta name="author" content="Girlified" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Girlified AI - FDA Approval Predictor</title>
+		<meta
+			name="description"
+			content="Predict FDA approval probability and identify regulatory risks with AI-powered analysis. Get insights on approval likelihood based on 20+ years of FDA data. Built for biotech innovators."
+		/>
+		<meta name="author" content="Girlified" />
 
-    <meta property="og:title" content="Girlified AI - Clinical Trial Simulation Platform" />
-    <meta property="og:description" content="Accelerate approvals with AI-powered clinical simulations. Test, validate, and improve your health products before costly trials." />
-    <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+		<meta
+			property="og:title"
+			content="Girlified AI - FDA Approval Predictor"
+		/>
+		<meta
+			property="og:description"
+			content="Predict FDA approval probability and identify regulatory risks with AI-powered analysis. Get insights on approval likelihood based on 20+ years of FDA data."
+		/>
+		<meta property="og:type" content="website" />
+		<!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <!-- <meta name="twitter:card" content="summary_large_image" />
+		<!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" /> -->
-    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
-    <link rel="icon" href="/favicon.ico" />
-  </head>
+		<!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+		<link rel="icon" href="/favicon.ico" />
+	</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
